--- a/source/_assets/less/main.less
+++ b/source/_assets/less/main.less
@@ -36,6 +36,29 @@ img {
   p {
     @apply .my-4;
   }
+
+  a {
+    @apply .text-sunset;
+  }
+
+  a:hover {
+    @apply .underline;
+  }
+}
+
+.video-embed {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  margin: 2rem 0;
+}
+
+.video-embed iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .banner-text {
